# roguelike-tutorial

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  Cargo.toml  Makefile  Makefile.toml  README.md
.github/: CODEOWNERS
.github/workflows/: docker.yml  github-pages.yml
deploy/kubernetes/: deployment.yaml  ingress.yaml  service.yaml
docker/: Dockerfile
resources/: index.html
src/: lib.rs  main.rs  map.rs  player.rs  rect.rs
static/: index.html
