[package]
name = "roguelike-tutorial"
version = "0.1.0"
authors = ["Lucas Slebos"]
edition = "2021"
# resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.1" }
specs = "0.18.0"
specs-derive = "0.4.1"
bracket-terminal = "=0.8.5"
