[package]
name = "roguelike-tutorial"
version = "0.1.0"
authors = ["Lucas Slebos"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rltk = "0.8"
specs = "0.18"
specs-derive = "0.4"
bracket-terminal = "=0.8.5"
wasm-bindgen = "0.2"
