[package]
name = "roguelike-tutorial"
version = "0.4.3"
authors = ["Lucas Slebos"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rltk = "0.8"
specs = "0.18"
specs-derive = "0.4"
bracket-lib = { git = "https://github.com/amethyst/bracket-lib.git", rev = "851f6f0" }
wasm-bindgen = "0.2"
